yamls/prometheus/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus-temp.sin.lan`)
    kind: Rule
    services:
      - name: prometheus
        port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`prometheus-temp.sin.lan`)
    kind: Rule
    services:
      - name: prometheus
        port: 9090
